--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@pinia/nuxt": "^0.4.11",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
+    "@vueuse/core": "^10.5.0",
     "dayjs": "^1.11.9",
     "lodash-es": "^4.17.21",
     "sass": "^1.65.1",
