--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint:fix": "prettier --write --list-different . && yarn lint:js --fix"
   },
   "dependencies": {
+    "@intlify/unplugin-vue-i18n": "^1.5.0",
     "@pinia/nuxt": "^0.4.11",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.3",
@@ -47,6 +48,7 @@
     "prettier-plugin-tailwindcss": "^0.5.3",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
+    "vue-i18n": "^9.8.0",
     "yarn": "^1.22.19"
   }
 }
