feat: add dependency

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vueuse/core": "^10.5.0",
     "dayjs": "^1.11.9",
     "lodash-es": "^4.17.21",
+    "pinia": "^2.1.7",
     "sass": "^1.65.1",
     "swiper": "^10.2.0",
     "uuid": "^9.0.0",
